# SolarEngine

./: .gitignore  CMakeLists.txt  ProjectProperties.json
batch/: build.bat  configure.bat  run.bat
include/: config.h.in  linmath.h  solmath.h  solstd.h  window.h
scripts/: build.bat  linux_exec.sh  linuxb_build.sh  run.bat  win_exec.bat
src/: linmath.cpp  main.cpp  solstd.cpp  window.cpp
